--- a/static/css/style.css
+++ b/static/css/style.css
@@ -215,3 +215,11 @@ h2 {
     font-weight: bold;
     margin-bottom: 10px;
 }
+
+
+.log-display {
+  height: 200px; /* adjust this value to set the height of the element */
+  width: 750px;
+  overflow-y: auto;
+  overflow-x: auto;
+}
