--- a/templates/index.html
+++ b/templates/index.html
@@ -72,15 +72,10 @@
                     </div>
 
                     <div class="form-group">
-                        <label>Log Level Filter</label>
-                        <select class="input-field" id="log-level-filter" required>
-                            <option value="all">All Levels</option>
-                            <option>ERROR</option>
-                            <option>WARN</option>
-                            <option>INFO</option>
-                        </select>
+                        <label for="query">Query</label>
+                        <input type="text" class="input-field" id="input-query" placeholder="Enter your query" required>
                     </div>
-
+                    
                     <button type="submit" class="btn-primary" id="analyze-logs-button">Analyze Logs</button>
                 </form>
             </section>
