--- a/static/css/style.css
+++ b/static/css/style.css
@@ -204,8 +204,9 @@ label {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 24px;
-  color: #333;
+  font-size: 36px;
+  color: #fff;
+  z-index: 1000;
 }
 
 
