--- a/static/css/style.css
+++ b/static/css/style.css
@@ -222,12 +222,17 @@ label {
 /* CSS FOR THE SPINNER */
 .spinner {
   position: absolute;
-  top: 50%;
+  top: 72%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 36px;
-  color: #fff;
+  font-size: 150px;
+  color: var(--accent-orange);
   z-index: 1000;
+  display: none; /* Set the initial display property to none */
+}
+
+.spinner.show {
+  display: block;
 }
 
 
@@ -329,4 +334,67 @@ label {
 .ai-analysis-container{
     padding-top: 0;
     margin-top: 0;
+}
+
+#suggestions-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 500px;
+    background-color: var(--light-bg); /* Light background for the suggestion container */
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.nav-button {
+    background-color: var(--accent-orange); /* Accent color for navigation buttons */
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 18px;
+    border-radius: 50%;
+    transition: background-color 0.3s;
+}
+
+.nav-button:hover {
+    background-color: var(--primary-red); /* Primary color on hover */
+}
+
+#suggestion-bubble {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    animation: bubble-appear 0.3s ease-out; /* Bubble appearance animation */
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+#suggestion-text {
+    font-size: 18px;
+    font-weight: bold;
+    color: var(--dark-bg); /* Dark text color for readability */
+    text-align: center;
+}
+
+#suggestion-counter {
+    font-size: 14px;
+    color: var(--dark-bg); /* Dark counter color for consistency */
+}
+
+@keyframes bubble-appear {
+    from {
+        opacity: 0;
+        transform: scale(0.8);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
