--- a/static/css/style.css
+++ b/static/css/style.css
@@ -129,7 +129,7 @@ label {
     box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
     flex-direction: column;
     margin-top: 2rem;
-    font-family: Verdana, Geneva, Tahoma, sans-serif; !important
+    font-family: Verdana, Geneva, Tahoma, sans-serif !important;
 }
 
 .results-tabs {
