Updated Latest Question; Commented Query Bottom Suggestion Bubble

--- a/templates/index.html
+++ b/templates/index.html
@@ -61,10 +61,13 @@
                     <form id="QuestionForm" style="display: none;">
                         <h3>Frequently Asked Questions (FAQ) List:</h3>
                         <ul id="question-list">
-                            <li class="question-item">What was the cause of MemCache?</li>
-                            <li class="question-item">How many withdrawal transaction errors happened?</li>
-                            <li class="question-item">How many transactions took longer than expected?</li>
-                            <li class="question-item">What was the error rate for the last hour?</li>
+                            <li class="question-item">Show me the hotspots in the log for the given time window?</li>
+                            <li class="question-item">Determine the anomalies observed</li>
+                            <li class="question-item">What were the similar historical occurrences last month?</li>
+                            <li class="question-item">List me the exception summary and count?</li>
+                            <li class="question-item">Share the sequence of events for the customer flow?</li>
+                            <li class="question-item">Generate a response time analysis?</li>
+                            <li class="question-item">List me all the App dependencies and end points?</li>
                         </ul>
                     </form>
                 </div>
