--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
 
             <!-- SPINNER PANEL -->
 
-            <div id="spinner" class="spinner">
+            <div id="spinner" class="spinner" style="display: none;">
                 <i class="fa fa-spinner fa-spin"></i>
             </div>
 
