--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,7 @@
         <header class="main-header">
             <div class="container header-content">
                 <div class="branding">
-                    <h1>Log Analyzer</h1>
-                    <p>Log Analyzer with Gen AI</p>
+                    <h1>GenAI Log Analyzer</h1>
                 </div>
             </div>
         </header>
@@ -57,13 +56,14 @@
                     <form id="QuestionForm" style="display: none;">
                         <h3>Frequently Asked Questions (FAQ) List:</h3>
                         <ul id="question-list">
-                            <li class="question-item">Show me the hotspots in the log for the given time window?</li>
-                            <li class="question-item">Determine the anomalies observed</li>
-                            <li class="question-item">What were the similar historical occurrences last month?</li>
-                            <li class="question-item">List me the exception summary and count?</li>
-                            <li class="question-item">Share the sequence of events for the customer flow?</li>
-                            <li class="question-item">Generate a response time analysis?</li>
-                            <li class="question-item">List me all the App dependencies and end points?</li>
+                            <li class="question-item">Show me the error hotspots in the logs for the selected time window</li>
+                            <li class="question-item">Similar historical occurrence of payment failures in the last month</li>
+                            <li class="question-item">Assess the customers impacted</li>
+                            <li class="question-item">Determine anomalies observed</li>
+                            <li class="question-item">List me the exception summary and counts</li>
+                            <li class="question-item">Share the sequence of events for customer flow</li>
+                            <li class="question-item">Transaction latency and response time analysis</li>
+                            <li class="question-item">List the app dependencies and REST or SOAP endpoints</li>
                         </ul>
                     </form>
                 </div>
