Moved Buttons outside the text box area

--- a/templates/index.html
+++ b/templates/index.html
@@ -126,6 +126,15 @@
                     <button class="tab-button" id="happyPath-tab-button">Happy Path</button>
                 </div>
 
+                <div class="results-tabs" id="AI-Analysis-Sub-Section" style="display: none;">
+                    <button class="tab-button inner-tab" id="AIAnalysis-summary-tabs-button" data-section="summary-section">Summary</button>
+                    <button class="tab-button inner-tab" id="AIAnalysis-explanation-tabs-button" data-section="explanation-section">Explanation</button>
+                    <button class="tab-button inner-tab" id="AIAnalysis-expectedflow-tabs-button" data-section="expectedflow-section">Expected Flow</button>
+                    <button class="tab-button inner-tab" id="AIAnalysis-remediation-tabs-button" data-section="remediation-section">Remediation</button>
+                    <button class="tab-button inner-tab" id="AIAnalysis-report-tabs-button" data-section="report-section">Report</button>
+                </div>
+
+
                 <pre class="log-display" id="logOutput"></pre>
 
                 <div class="ai-analysis">
