Added Demo Changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -58,12 +58,12 @@
                         <ul id="question-list">
                             <li class="question-item">Show me the error hotspots in the logs for the selected time window</li>
                             <li class="question-item">Similar historical occurrence of payment failures in the last month</li>
-                            <li class="question-item">Assess the customers impacted</li>
+                            <li class="question-item">Assess failure transactions and provide impacted customers information</li>
                             <li class="question-item">Determine anomalies observed</li>
-                            <li class="question-item">List me the exception summary and counts</li>
-                            <li class="question-item">Share the sequence of events for customer flow</li>
+                            <li class="question-item">List me the exceptions noticed and its counts</li>
+                            <li class="question-item">Share the sequence of flow for a withdrawal transaction</li>
                             <li class="question-item">Transaction latency and response time analysis</li>
-                            <li class="question-item">List the app dependencies and REST or SOAP endpoints</li>
+                            <li class="question-item">List the REST or SOAP URL endpoints application is communicating to</li>
                         </ul>
                     </form>
                 </div>
