Updated trace id format

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
                         <h3>Frequently Asked Questions (FAQ) List:</h3>
                         <ul id="question-list">
                             <li class="question-item">Show me the error hotspots in the logs for the selected time window</li>
-                            <li class="question-item">Similar historical occurrence of payment failures in the last month</li>
+                            <li class="question-item">Historical occurrence of payment failures in the last month</li>
                             <li class="question-item">Assess failure transactions and provide impacted customers information</li>
                             <li class="question-item">Determine anomalies observed</li>
                             <li class="question-item">List me the exceptions noticed and its counts</li>
